<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">超级账户</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">设置</string>
    <string name="action_help">帮助</string>
    <string name="title_activity_search">搜索</string>
    <string name="title_activity_settings">设置</string>
    <string name="settings_header_login">账户登录</string>
    <string name="login">登录</string>
    <string name="settings_keep_logged_in">保持登录状态</string>
    <string name="title_activity_login">登录</string>
    <string name="login_username_hint">用户名或手机号</string>
    <string name="login_password_hint">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register">加入我们</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_forget_pwd">忘记密码</string>
    <string name="ad_line1">精彩生活</string>
    <string name="ad_line2">由我定义</string>
    <string name="ad_enter">随地随地，每时每刻，尽享尊贵服务</string>
    <string name="edit_username">请输入用户名</string>
    <string name="edit_password">请设置密码</string>
    <string name="repeat_password">请再次输入密码</string>
    <string name="china">中国</string>
    <string name="last_name">姓氏</string>
    <string name="first_name">名字</string>
    <string name="telephone">手机号</string>
    <string name="next_step">下一步</string>
    <string name="title_activity_schedule">日程管理</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="date_format">yyyy/MM/dd</string>
    <string name="schedule">日程</string>
    <string name="title_activity_create_schedule">创建日程</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="alarm_time">闹钟</string>
    <string name="is_alarm_on">是否设置提醒</string>
    <string name="schedule_content_hint">请输入日程内容</string>
    <string name="create_schedule">创建日程</string>
    <string name="create_schedule_success">已创建一条日程</string>
    <string name="searchview_description_query">请输入搜索的内容</string>
    
    <string name="home1">我的事务</string>
    <string name="home2">我的盟</string>
    <string name="home3">创建新事务</string>
    <string name="home4">创建盟</string>
    <string name="home5">常参与的事务</string>

</resources>
