<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_grey"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.simu.superid.SettingsActivity" >

    <LinearLayout
        android:id="@+id/settings_wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/LVHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="8.0dip"
            android:text="@string/settings_header_login" />

        <TextView
            android:id="@+id/txt_login"
            style="@style/LVClickable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <RelativeLayout
            style="@style/LVClickable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="0.0dip" >

            <TextView
                android:id="@+id/txt_keep_logged_in"
                style="@style/LVStub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:gravity="left|center"
                android:text="@string/settings_keep_logged_in"
                android:textSize="14.0sp" />

            <ToggleButton
                android:id="@+id/toggle_keep_logged_in"
                android:layout_width="80.0dip"
                android:layout_height="20.0dip"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8.0dip"
                android:background="@drawable/toggle_switch"
                android:textOn=""
                android:textOff="" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>