<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simu.superid.RegisterActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/choose_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8.0dip"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/country_code"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:paddingBottom="8.0dip"
                android:paddingTop="8.0dip"
                android:text="0086"
                android:textSize="18.0sp" />

            <View
                android:layout_width="1.0dip"
                android:layout_height="42.0dip"
                android:background="@color/light_grey_text" />

            <TextView
                android:id="@+id/country_name"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:paddingBottom="8.0dip"
                android:paddingTop="8.0dip"
                android:text="@string/china"
                android:textSize="18.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8.0dip"
            android:background="@color/white"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/reg_username_used"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="6.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_check" />

                <EditText
                    android:id="@+id/reg_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toLeftOf="@id/reg_username_used"
                    android:background="@color/transparent"
                    android:hint="@string/edit_username"
                    android:inputType="textNoSuggestions"
                    android:paddingBottom="6.0dip"
                    android:paddingTop="6.0dip"
                    android:textSize="16.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/light_grey_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/reg_password_strength"
                    android:layout_width="40dip"
                    android:layout_height="7dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="15.0dip"
                    android:src="@drawable/pwd_strong"
                    android:scaleType="fitXY" />

                <EditText
                    android:id="@+id/reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toLeftOf="@id/reg_password_strength"
                    android:background="@color/transparent"
                    android:hint="@string/edit_password"
                    android:inputType="textPassword"
                    android:paddingBottom="6.0dip"
                    android:paddingTop="6.0dip"
                    android:textSize="16.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/light_grey_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/reg_password_correct"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="6.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_uncheck" />

                <EditText
                    android:id="@+id/reg_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toLeftOf="@id/reg_password_correct"
                    android:background="@color/transparent"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:paddingBottom="6.0dip"
                    android:paddingTop="6.0dip"
                    android:textSize="16.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/light_grey_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/lastname_correct"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="6.0dip"
                    android:scaleType="fitXY" />

                <EditText
                    android:id="@+id/reg_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toLeftOf="@id/lastname_correct"
                    android:background="@color/transparent"
                    android:hint="@string/last_name"
                    android:paddingBottom="6.0dip"
                    android:paddingTop="6.0dip"
                    android:textSize="16.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/light_grey_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/firstname_correct"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="6.0dip"
                    android:scaleType="fitXY" />

                <EditText
                    android:id="@+id/reg_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toLeftOf="@id/firstname_correct"
                    android:background="@color/transparent"
                    android:hint="@string/first_name"
                    android:paddingBottom="6.0dip"
                    android:paddingTop="6.0dip"
                    android:textSize="16.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/light_grey_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8.0dip"
                android:layout_marginTop="8.0dip"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/telephone_correct"
                    android:layout_width="25dip"
                    android:layout_height="25dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="6.0dip"
                    android:scaleType="fitXY" />

                <EditText
                    android:id="@+id/reg_telephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toLeftOf="@id/telephone_correct"
                    android:background="@color/transparent"
                    android:hint="@string/telephone"
                    android:inputType="phone"
                    android:paddingBottom="6.0dip"
                    android:paddingTop="6.0dip"
                    android:textSize="16.0sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dip"
                android:background="@color/light_grey_text" />
        </LinearLayout>
        
        <Button
            android:id="@+id/reg_to_confirm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_marginTop="20.0dip"
            android:background="@drawable/btn_login_bg"
            android:gravity="center"
            android:text="@string/next_step"
            android:textSize="16.0sp"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>